# sample-amazon-quick-suite-starter-kit

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc  404.html  CONTRIBUTING.md  LICENSE  README.md  bootstrap.sh  cdk.context.entra.example.json  cdk.context.example.json  cdk.json  cost.sh  deploy.sh  eslint.config.mjs  hackathon-quicksuite-terraform.json  index.html  manifest.yaml  mkdocs.yml  package-lock.json  package.json  status.sh
.github/workflows/: ci.yml
agentcore-agents/agent1/: README.md  config.yaml
agentcore-agents/agent2/: README.md  config.yaml
aws-resources/: config.yaml
aws-resources/terraform/: main.tf
cleanup/: index.html
core/: synth-cfn-template.ts
core/custom-resources/: README.md  config.yaml
core/custom-resources/lambdas/: Makefile  pyproject.toml
core/utils/: Makefile  README.md  cost_estimator.py  deploy_log.py  deploy_targets.py  orchestrator.py  param_resolver.py  pyproject.toml
core/utils/src/: __init__.py  (+2 more)
data-sources/athena/: README.md  config.yaml
data-sources/glue/: README.md  config.yaml
data-sources/redshift/: README.md  config.yaml
data-sources/s3-csv/: README.md  config.yaml
data-sources/topic/: README.md  config.yaml
docs/: REFACTOR_PLAN.md  accelerator-integration-guide.md  architecture.md  cleanup.md  getting-started.md  index.md  module-development-guide.md
docs/operator-tools/: index.md  monitoring-runbook.md  user-management-runbook.md
getting-started/: index.html
governance/group-assignments/: README.md  config.yaml
governance/infrastructure/: README.md  config.yaml
governance/permissions/: README.md  config.yaml
governance/subscription/: README.md  config.yaml
governance/themes/: README.md  config.yaml
infrastructure/: config.yaml
infrastructure/terraform/: main.tf
lambdas/: Makefile  README.md
lambdas/src/: custom_resource_handler_for_quick_suite_setup.py
lib/: amazon-quick-suite-starter-kit-stack.ts  app.ts
operator-tools/: index.html
operator-tools/monitoring-runbook/: index.html
operator-tools/user-management-runbook/: index.html
operator_tools/: Makefile  README.md  pyproject.toml
operator_tools/src/: manage_scim_groups.py  manage_users.py
quicksight-resources/analyses/: README.md
quicksight-resources/dashboards/: README.md
quicksight-resources/topics/: README.md
sample-data/: airline_revenue.csv
search/: search_index.json
templates/customer-project/: README.md  manifest.yaml
test-resource-types/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
use-case-accelerators/idp-accelerator/: README.md  config.yaml  deploy.sh
use-case-accelerators/live-meeting-assistant/: README.md  config.yaml  deploy.sh
(+33 files in other folders)
