[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-quick-suite-starter-kit-operator-tools"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aws-lambda-powertools>=2.0.0",
    "pydantic[email]>=2.11.5",
    "boto3>=1.39.2",
    "click>=8.3.1",
]

[project.scripts]
manage-users = "manage_users:cli"
monitor = "monitor:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0",
    "isort>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
lint.ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D212",  # multi-line-summary-first-line (conflicts with D213)
    "D107",  # missing docstring in __init__
    "TRY003", # avoid specifying long messages outside the exception class
    "RUF002", # docstring contains ambiguous quotes
    "C901",  # function is too complex
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Updated to Python 3.12 (latest supported by ruff)
target-version = "py312"

# Enumerate all fixed violations.
show-fixes = true

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
